--- a/ch3.tex
+++ b/ch3.tex
@@ -1,37 +1,46 @@
-\chapter{The Value Behind Traffic: How Patient Discretion and Information Coarseness Altered Healthcare Traffic in the Wake of COVID-19}
+\chapter{The Value Behind Traffic}
 
-\begin{abstract} 
-\noindent 
- \textbf{Background:} Traffic represents a key operational input, especially in healthcare. Many aspects of medicine cannot happen from a distance, and serious consequences follow delayed or omitted care. And yet with the emergence of Covid-19 in March of 2020, traffic to many clinics vanished overnight. \\
- \textbf{Aim:} Using empirical methods, we aim to explore how the value of the service consumed impacts healthcare clinic traffic. We also examine how traffic changed with coarse and precise signals of the pandemic environment. \\
- \textbf{Methods:} Our study combines observations from healthcare clinics across 15 US states, anonymized cellphone mobility data, Covid-19 severity measures, and state-wide stay-at-home orders. A Lasso-based procedure from machine learning non-arbitrarily selects instruments and generates exogenous county-level measures of individual mobility. \\
- \textbf{Results:} Clinic traffic returns with rising personal mobility, but the size of returns vary by the type of service: A 1\% increase in mobility yields a 2\% return to vaccination traffic but only a 0.5\% return to non-vaccination traffic. And the response to signals depends on signal severity and treatment sought: While precise signals affect non-vaccination traffic more than coarse signals, vaccination traffic seems immune to such factors. \\
- \textbf{Conclusions:} During the pandemic, preferences emerged and patients exercised discretion in ways many feared. Encouragingly, we find patients prioritized important services and shouldered some of the burden of their own wellness. By studying such decisions, we identify and characterize powerful predictors of healthcare clinic traffic, and we encourage researchers to explore the role of patient discretion in the co-production of wellness. \\
- \end{abstract}
+% \begin{tabular}{c}
+    \textbf{The Value Behind Traffic: How Patient Discretion and Information Coarseness Altered Healthcare Traffic in the Wake of COVID-19.}
+    This Chapter is co-authored with Dr. Bradley Staats.
+% \end{tabular}
+
+% \begin{center} \rule{6in}{0.01in} \end{center}
+% \noindent 
+%  \textbf{Chapter Abstract:} \\
+%  \textbf{Background:} Traffic represents a key operational input, especially in healthcare. Many aspects of medicine cannot happen from a distance, and serious consequences follow delayed or omitted care. And yet with the emergence of Covid-19 in March of 2020, traffic to many clinics vanished overnight. \\
+%  \textbf{Aim:} Using empirical methods, we aim to explore how the value of the service consumed impacts healthcare clinic traffic. We also examine how traffic changed with coarse and precise signals of the pandemic environment. \\
+%  \textbf{Methods:} Our study combines observations from healthcare clinics across 15 US states, anonymized cellphone mobility data, Covid-19 severity measures, and state-wide stay-at-home orders. A Lasso-based procedure from machine learning non-arbitrarily selects instruments and generates exogenous county-level measures of individual mobility. \\
+%  \textbf{Results:} Clinic traffic returns with rising personal mobility, but the size of returns vary by the type of service: A 1\% increase in mobility yields a 2\% return to vaccination traffic but only a 0.5\% return to non-vaccination traffic. And the response to signals depends on signal severity and treatment sought: While precise signals affect non-vaccination traffic more than coarse signals, vaccination traffic seems immune to such factors. \\
+%  \textbf{Conclusions:} During the pandemic, preferences emerged and patients exercised discretion in ways many feared. Encouragingly, we find patients prioritized important services and shouldered some of the burden of their own wellness. By studying such decisions, we identify and characterize powerful predictors of healthcare clinic traffic, and we encourage researchers to explore the role of patient discretion in the co-production of wellness. 
+% \begin{center} \rule{6in}{0.01in} \end{center}
 %  \noindent\keywords{Traffic; Vaccinations; Healthcare Operations; Empirical Operations; Machine Learning }
 
 \section{Introduction}
- Many aspects of company operations depend on understanding customer traffic \citep{Gallino2014}. \cite{Perdikaki2012} argue retailer profitability directly depends on the ability to track traffic, for several reasons. First, traffic informs labor planning \citep{Mani2015,Chuang2015,Perdikaki2017,Netessine2010}. Second, variation in traffic can highlight operational problems in other areas \citep{Lee2017}. And finally, understanding traffic patterns enables better traffic prediction \citep{Yung2020,Kamalahmadi2021,Abrishami2018}. Traffic represents a key operational input -- especially in healthcare. Even with growing acceptance of telemedicine \citep{WSJ_21_telemed,Friedman2021}, limits remain: For example, a physician cannot perform a physical or administer vaccines without seeing patients in-person. Many aspects of healthcare cannot happen from a distance \citep{Romanick-Schmiedl2020}, and serious consequences follow delayed or omitted care \citep{Findling2020,CDC_ExcessDeath}. Operational success depends on tracking traffic, but it was not until March of 2020 that the dependence became brutally obvious.
+ Customer traffic drives many aspects of company operations \citep{Gallino2014}. \cite{Perdikaki2012} argue retailer profitability directly depends on the ability to understand traffic, for several reasons. First, traffic informs labor planning \citep{Mani2015,Chuang2015,Perdikaki2017,Netessine2010}. Second, variation in traffic can highlight operational problems in other areas \citep{Lee2017}. And finally, understanding traffic patterns enables better traffic prediction \citep{Yung2020,Kamalahmadi2021,Abrishami2018}. Traffic represents a key operational input -- especially in healthcare. Even with growing acceptance of telemedicine \citep{WSJ_21_telemed,Friedman2021}, limits remain: a physician cannot perform a physical or administer vaccines without seeing patients in-person. For now, many aspects of healthcare cannot happen when separated \citep{Romanick-Schmiedl2020} and serious consequences follow delayed or omitted care \citep{Findling2020,CDC_ExcessDeath}. Operational success depends on understanding traffic -- and the events surrounding March 2020 drive this point home in healthcare.
+ % Operational success depends on understanding traffic, and the events of, and subsequent to, March 2020 drive this point home with clarity in healthcare
  
- With the emergence of the SARS-CoV-2 virus and the associated disease (Covid-19), traffic to many clinics vanished overnight. Some preventive care measures dropped by more than 80\% \citep{Cantor2020}. The declines were so precipitous and so concerning, a campaign in July 2020 advised: “Stay 6 feet away from others, stay close with your doctor" \citep{StopMedicalDistancing.org}. Such drops possess grave implications for patient welfare \citep{WSJ_skipDoc}, and so we ask: “What factors drove healthcare clinic traffic during the Covid-19 pandemic?" Our work empowers clinics to better meet patient needs \citep[as in][]{Musalem2020} and accurately predict traffic moving forward. 
+ With the emergence of the SARS-CoV-2 virus and the associated disease (Covid-19), traffic to many clinics vanished overnight. Some preventive care measures dropped by more than 80\% \citep{Cantor2020}. The declines were so precipitous and so concerning, a campaign in July 2020 advised: “Stay 6 feet away from others, stay close with your doctor" \citep{StopMedicalDistancing.org}. Such drops possess grave implications for patient \citep{WSJ_skipDoc} and physician \citep{WSJ2020_job_losses} welfare, and so we ask: “What factors drove healthcare clinic traffic during the Covid-19 pandemic?" Our work empowers clinics to better meet patient needs \citep[as in][]{Musalem2020} and accurately predict traffic moving forward. 
 %  perhaps as much as 50\% of the US population delayed some type of care in 2020 \citep{Findling2020}.
 
- To date, as evidenced by the plethora of studies listed in \cite{Gupta2020}, the state-wide “stay-at-home" or “shelter-in-place" orders remain the literature's primary concern. But stay-at-home orders cannot fully explain the drop in clinic traffic. Many states issued orders, but most clinics remained open through exemptions for “essential services." Moreover, individual decisions and personal preferences appear to drive willingness to engage with in-person activities more than the state-wide orders \citep{Goolsbee2020_key}. Figure \ref{fig:t2_mot_fig} affirms this insight using observations from our study: \textit{Personal mobility} (i.e., Trips per Person), which captures a willingness to travel, drops even before stay-at-home orders go into effect. And so our paradigm evolves: To improve patient health, you must see them in-person. To see them in-person, you have to be open. But just being open cannot suffice: They must also decide that they want to be seen.
+ To date, as evidenced by the plethora of studies listed in \cite{Gupta2020}, the state-wide “stay-at-home" or “shelter-in-place" orders remain the literature's primary concern. But stay-at-home orders cannot fully explain the drop in clinic traffic. Many states issued orders, but most clinics remained open through exemptions for “essential services." Moreover, individual decisions and personal preferences appear to drive willingness to engage with in-person activities more than the state-wide orders \citep{Goolsbee2020_key}. Figure \ref{fig:t2_mot_fig} affirms this insight using observations from our study: \textit{Personal mobility} (i.e., Trips per Person), which captures a willingness to travel, drops even before stay-at-home orders go into effect. And so our paradigm evolves: To improve patient health, see most patients in-person. To see them in-person, you have to be open. But just being open cannot suffice: Patients must also decide that they want to be seen.
+ % To address certain aspects of patient health, you must see patients in-person. To see patients in-person, you have to be open. But just being open cannot suffice: Patients must also decide that they want to be seen.
  
  \begin{figure}[!b]
     \centering
     \caption{Trips per Person, or personal mobility, drops before shutdown orders go into effect. The drop also coincides with an increase in search engine interest in Covid-19.}
     \includegraphics[scale=1]{Figures/VC2/MotFig-Take2.png}     
     \label{fig:t2_mot_fig}
-    \floatfoot{\textbf{Figure Note:} The figure plots mobility and search data for 15 US states relative to the stay-at-home order for each state. The 15 states represent the states for which we also have clinic traffic observations (Section \ref{data}). The blue line depicts a “Loess" conditional smoothing function applied to the raw data. The graph illustrates “Trips per Person" as recorded by the \cite{MTI2020}. “Search Intensity" represents user searches for the word “covid" from \cite{Google2021}, where intensity varies from very few to many searches on a scale from 0 to 100. }
+    \floatfoot{\textbf{Figure Note:} The figure plots mobility and search data for 15 US states relative to the stay-at-home order for each state. The 15 states represent the states for which we also have clinic traffic observations (Section \ref{data}). The blue line depicts a “Loess" conditional smoothing function applied to the raw data. The graph illustrates “Trips per Person" as recorded by the \cite{MTI2020}. “Search Intensity" represents user searches for the word “covid" from \cite{Google2021_covid}, where intensity varies from very few to many searches on a scale from 0 to 100. }
  \end{figure}  
  
- What then influences the decision to be seen? Executive orders might influence some behavior, but patient discretion and personal preferences ultimately dictate mobility today, and tomorrow, and beyond. In contrast to such orders, Figure \ref{fig:t2_mot_fig} shows a drop in mobility coincides with an increase in Google search intensity. Perhaps mobility drops with greater fear of Covid \citep{Alfaro2020}, but then what drives such fear? Signals of environmental safety could incite fear, either as a coarse mandate (e.g., “Stay home: It is not safe to go out") or a precise nudge (e.g., “10\% of people in your area are sick"). But for every push, see a pull: Fear compels someone to stay home, and \textit{value} invites someone to go out. If we allow discretion in movement -- that is, if we allow a patient to choose between staying or going -- we must then consider the value generated by such movement.
+ What then influences the decision to be seen? Executive orders might influence some behavior, but patient discretion and personal preferences likely dictate mobility just as much if not more. In contrast to such orders, Figure \ref{fig:t2_mot_fig} shows a drop in mobility coincides with an increase in Google search intensity. Perhaps mobility drops with greater fear of Covid \citep{Alfaro2020}, but then what drives such fear? Signals of environmental safety could incite fear, either as a coarse mandate (e.g., “Stay home: it is not safe to go out") or a precise nudge (e.g., “10\% of people in your area are sick"). But for every push, see a pull: Fear compels someone to stay home, and \textit{value} invites someone to go out. Since there is discretion in movement -- where an individual can choose between staying or going -- we must then consider the value generated by such movement.
  
- In studying movement value, traffic cannot simply remain an overarching construct, as high-value trips might pull patients more. If mobility drops but remains non-zero (see Figure \ref{fig:t2_mot_fig}), then trips that remain must generate greater value than trips that fade. Hence, we ask: “During the pandemic, how does the value of the service consumed impact healthcare clinic traffic?" We operationalize the question by comparing general trips to a clinic (less valuable) to trips which specifically include vaccination (more valuable). Clinic “traffic" nests both, and both serve important roles in patient health. But delaying or omitting vaccinations poses immediate risks to the patient and the community \citep{Salmon2015,Brewer2017}; the flu vaccine alone averts tens of thousands of hospitalizations each year \citep{CDC2020}. And so we examine the pull of different services and discuss the implications for clinic traffic predictions. 
-  % Cite Brewer? Phadke?
+ In the end, because high-value trips might lead patients to travel more, traffic predictions need to account for movement value. If mobility drops but remains non-zero (see Figure \ref{fig:t2_mot_fig}), then trips that remain must generate greater value than trips that fade. Hence, we ask: “During the pandemic, how does the value of the service consumed impact healthcare clinic traffic?" We operationalize the question by comparing general trips to a clinic (less valuable) to trips which specifically include vaccination (more valuable). Clinic “traffic" nests both, and both serve important roles in patient health. But delaying or omitting vaccinations poses immediate risks to the patient and the community \citep{Salmon2015,Brewer2017}; the flu vaccine alone averts tens of thousands of hospitalizations each year \citep{CDC2020_flu}. And so we examine the pull of different services and discuss the implications for clinic traffic predictions. 
+ % In studying traffic, it is important to account for movement value as  
+ % Cite Brewer? Phadke?
 
- Our approach also models the push to stay home because of signal coarseness. Coarse signals about Covid-19 might be easier to understand while precise signals might be easier to use \citep{Morris2007}. Executive, state-wide stay-at-home orders represent coarse signals of environmental safety while local, publicly available Covid metrics (e.g., case counts) represent precise signals. To answer our research questions, our study combines observations from: Healthcare clinics across 15 US states; anonymized county-level cell phone mobility observations; county-level Covid-19 measures; and public information on state-wide stay-at-home orders. During our study period, three factors interact to shape healthcare clinic traffic: (i) Individual mobility preferences, (ii) the value of the care sought, and (iii) the perception of disease severity.
+ Our approach also models how information signals shape the decision to travel. A high-value goal may incentivize traffic, but environmental signals should also influence the calculation of value. In particular, we consider signal \textit{coarseness} \citep{Morris2007}: Executive, state-wide stay-at-home orders represent coarse signals of environmental safety while local, publicly available Covid metrics (e.g., case counts) represent precise signals. To answer our research questions, our study combines observations from: Healthcare clinics across 15 US states; anonymized county-level cell phone mobility observations; county-level Covid-19 measures; and public information on state-wide stay-at-home orders. During our study period, three factors interact to shape healthcare clinic traffic: (i) individual mobility preferences, (ii) the value of the care sought, and (iii) the perception of disease severity.
  % We also explore whether the severity of the precise signals matters by comparing changes in the effect of mobility with signals of lower severity (Covid case counts) and signals of higher severity (Covid death rates).
  
  Based on our empirical analysis, we find the following. \textbf{First}, clinic traffic returns with rising personal mobility. The size of such returns, however, vary significantly: A 1\% increase in mobility yields a large return to vaccination traffic (+2.169\%) but a fractional return to non-vaccination traffic (+0.56\%). More mobility means more traffic, depending on the type of care and value provided, one contribution of our study. \textbf{Second}, precise signals dominate coarse signals in affecting non-vaccination traffic. Precise signals also attenuate the effect of mobility on such traffic, especially when signaling even greater hazard (e.g., rising Covid death rates). In choosing information coarseness, trade-offs abound in the literature. We contribute to the debate by comparing one coarse signal, which has no impact, to precise signals which alter both mobility decisions and clinic outcomes. \textbf{Finally}, aside from personal mobility, no other factors have any detectable impact on vaccination traffic. Priorities emerged as states started reopening and people decided to leave home, revealing people may consider vaccinations more important than other elements of primary care. By studying the effect of such decisions, we identify and characterize powerful predictors of healthcare clinic traffic.
@@ -39,7 +48,7 @@
  In executing our study, we also add to emerging literature exploring effects of the Covid-19 pandemic. As surveyed in \cite{Gupta2020a}, most studies focus on the implications of stay-at-home orders; many examples exist in economics \citep[e.g.,][]{Goolsbee2020_key,Goolsbee2020_unpub,Alfaro2020,Cantor2020,Alfaro2021,Ziedan2020,Farboodi2020,Zhang2020}, though we know of only one published example in operations \citep{Wang2021}. As discussed in \cite{Wang2021}, such studies generally focus on mobility as the outcome of interest (p. 4). In contrast, our study considers mobility the aggregated decisions of individuals which then act as an input and predictor for our outcome, clinic traffic. To the best of our knowledge, no other studies have used personal mobility to predict changes in traffic during the pandemic. We also contribute by leveraging developments in machine learning to enhance our identification strategy.
  
  In Section \ref{VC2_HD}, we position our study in the broader literature which we use to develop and motivate our hypotheses. Section \ref{VC2_Emp} describes our data and our empirical strategy. Section \ref{VC2_Results} presents our results and a post-hoc analysis. Section \ref{VC2_Conc} concludes.
- 
+  
 
 \section{Hypothesis Development} \label{VC2_HD}
 \subsection{Mobilizing Differently: The Effect of Value}
@@ -157,11 +166,11 @@
 %  we lag our personal mobility measures to ensure they precede our outcomes temporally; enforcing the requirement for causality also minimizes concerns of simultaneity. Second, 
  
 \subsection{Econometric Strategy} \label{econ_strat}
- Valid instruments must satisfy two criteria: Relevance and Exclusion. More specifically, valid instruments must (a) vary similarly with the instrument-ed variable and (b) not affect the outcome through any channel other than through the instrument-ed variable. We seek to instrument the personal mobility for each county in a given US state. Our approach emulates a “leave one out" strategy. For each focal county, we use mobility measures for all other non-adjacent counties in the state as instruments. Given the regional nature of Covid-19 and since counties close to the focal county exhibit similar mobility patterns, the instruments satisfy the relevance condition. Additionally, mobility patterns in one county should have no causal effect on clinic traffic in another, for the following reasons. First, by excluding close and adjacent counties, individuals would have to cross multiple county lines to seek out primary care. Second, out-of-county trips plummeted during our study period \citep{MTI2020}. And finally, our regularization procedure (below) shrinks the explanatory power of each individual county; even if some patients crossed multiple counties to seek care, our method shrinks the contribution of such patients to the predicted mobility in a given county. Such instruments satisfy the exclusion restriction.
+ Valid instruments must satisfy two criteria: Relevance and Exclusion. More specifically, valid instruments must (a) vary similarly with the instrument-ed variable and (b) not affect the outcome through any channel other than through the instrument-ed variable. We seek to instrument the personal mobility for each county in a given US state. Our approach emulates a “leave one out" strategy. For each focal county, we use mobility measures for all other non-adjacent counties in the state as instruments. Given the regional nature of Covid-19 and since counties close to the focal county exhibit similar mobility patterns, the instruments satisfy the relevance condition. Additionally, mobility in one county should have no causal effect on clinic traffic in another, for the following reasons. First, by excluding close and adjacent counties, individuals would have to cross multiple county lines to seek out primary care. Second, out-of-county trips plummeted during our study period \citep{MTI2020}. And finally, our regularization procedure (below) shrinks the explanatory power of each individual county; even if some patients crossed multiple counties to seek care, our method shrinks the contribution of such patients to the predicted mobility in a given county. Such instruments satisfy the exclusion restriction.
  
  One question remains: For a focal county in a given state, how do we decide which counties to use as instruments? The state of Texas has \textbf{254} counties! One option: Select some nearby county. But such an approach seems arbitrary and does not specify which nearby county should be chosen. Another option: Use all other non-adjacent counties. But this may lead to the well-known problem of including both “many and weak" instruments \citep[p. 205]{Angrist2009}. 
  
- Goldilocks would choose something in-between the extremes, but exactly which counties should be chosen? We prefer a data-driven approach and proceed in the spirit of \cite{Belloni2012} and \cite{Belloni2011}, and so we apply a Lasso-based procedure from machine learning to non-arbitrarily select instruments and generate predicted values of local, personal mobility for each county.
+ We should choose something in-between the extremes, but exactly which counties should be chosen? We prefer a data-driven approach and proceed in the spirit of \cite{Belloni2012} and \cite{Belloni2011}, and so we apply a Lasso-based procedure from machine learning to non-arbitrarily select instruments and generate predicted values of local, personal mobility for each county. This approach only requires an assumption of instrument sparsity, where “there exists a relatively small set of important instruments whose identities are unknown that well- approximate the conditional expectation of the endogenous variables given the instruments" \cite[p. 2370]{Belloni2012}. Because nearby counties have \textit{more} similar mobility patterns than distant counties, we expect the marginal predictive power of distant counties will shrink to zero -- satisfying the requirement for sparsity.
  
  \subsubsection{The Lasso Estimator} 
  We briefly summarize the Lasso method here and refer interested readers to more complete discussions of Lasso in \cite{Hastie2009} and \cite{Belloni2012}, while \cite{Fisher2020} illustrate a different application of Lasso in an operations context. Adopting the notation of \cite{Hastie2009}, the Lasso estimate with the $L_1$ Lasso penalty $\Sigma_1^P|\beta_j|$ in Langrangian form follows, for a sample of size $N$ which produces $P$ coefficients:
@@ -177,7 +186,7 @@
  \subsubsection{2SLS Estimation Procedure} \label{2sls}
  For \textbf{Hypothesis 1} and \textbf{Hypothesis 2}, we test the effect of personal mobility and coarse/precise signals on our clinic outcomes. Given our instruments ($\hat{Z}^{lasso}$) for personal mobility, we proceed to follow a 2SLS approach as proposed by \cite{Wooldridge2010}, Chapter 6. One concern with our approach is the use of a “generated regressor." In Chapter 6, Wooldridge recommends following a 2SLS approach when using generated instruments, rather than a traditional ordinary least squares (OLS) approach. We build on his recommendation by leveraging the fixed effects 2SLS estimator \citep[Chapter 11]{Wooldridge2010}. As an added benefit, such an approach differences out any time-invariant unobservables which might confound the effect of mobility on our outcomes, such as the accessibility of an area to amenities like supermarkets or to public signals like radio or cable television.
  
- Please refer to Specification (\ref{spec_2sls}), which considers clinic $i$ in week $t$. In the first-stage of our regression, we instrument personal mobility ($Z_{it}$) with our predicted mobility ($\hat{Z}_{it}^{lasso}$) from our Lasso Estimation Procedure. Since personal mobility is endogenous, in the first stage, we must instrument both the endogenous variable and the endogenous interaction with the exogenous interaction between the variable and $\hat{Z}_{it}^{lasso}$. The second stage then regresses our outcome variables ($Y$: percent changes in total clinic traffic, non-vaccination traffic, and vaccination traffic) on the outcome of our first stage. We include our controls discussed in Section \ref{controls} as $\boldsymbol{X}_{it}$ in both stages; $\nu_{it}$ and $\epsilon_{it}$ represent our idiosyncratic shocks; $c_i$ represents unobservable clinic specific effects. In order to control for any serial time dependence, we cluster our standard errors at the clinic level. Alternatively, in Appendix \ref{app_fullReg}, we present our results when bootstrapping our standard errors.
+ Please refer to Specification (\ref{spec_2sls}), which considers clinic $i$ in week $t$. In the first-stage of our regression, we instrument personal mobility ($Z_{it}$) with our predicted mobility ($\hat{Z}_{it}^{lasso}$) from our Lasso Estimation Procedure. Since personal mobility is endogenous, in the first stage, we must instrument both the endogenous variable and the endogenous interaction with the exogenous interaction between the variable and $\hat{Z}_{it}^{lasso}$. The second stage then regresses our outcome variables ($Y$: percent changes in total clinic traffic, non-vaccination traffic, and vaccination traffic) on the outcome of our first stage. We include our controls discussed in Section \ref{controls} as $\boldsymbol{X}_{it}$ in both stages; $\nu_{it}$ and $\epsilon_{it}$ represent our idiosyncratic shocks; $c_i$ represents unobservable clinic specific effects. In order to control for any serial time dependence, we cluster our standard errors at the clinic level. Alternatively, in Appendix \ref{app_vc2_fullReg}, we present our results when bootstrapping our standard errors.
 %  Our full econometric specification follows, where 
 % $W_{it}$ = [$Z_{it},Z_{it}*\mathbbm{1}\{Shutdown\}_{it}$].
 
@@ -190,12 +199,12 @@
  
 \section{Results} \label{VC2_Results}
  \subsection{Model-Free Evidence}
- We present Figure \ref{fig:model_free_vc2} as model-free evidence of our findings. The measures in the figure represent percent changes from pre-pandemic baselines; in other words, a 0\% change would mean a state had returned to their pre-pandemic baseline. From the figure, we note the following. First, personal mobility (Trips per Person) returns to or exceeds pre-pandemic baselines for all states by the end of August 2020, with one exception (Florida). Second, vaccination traffic returns to or exceeds pre-pandemic baselines, again with only one exception (New York). The exact opposite occurs, however, for total clinic traffic (the combination of vaccination and non-vaccination traffic): Only Indiana seems to ever recover a pre-pandemic baseline for total clinic traffic. We proceed by testing our hypotheses using observations from March 1 through 60-days following the lifting of the stay-at-home orders. Our empirical approach focuses on how changes in mobility and coarse or precise signals affect clinic traffic. Table \ref{tab:H1H2} and Table \ref{tab:phoc} highlight the most pertinent coefficients from the full regression tables in Appendix \ref{app_fullReg}.
+ We present Figure \ref{fig:model_free_vc2} as model-free evidence of our findings. The measures in the figure represent percent changes from pre-pandemic baselines; in other words, a 0\% change would mean a state had returned to their pre-pandemic baseline. From the figure, we note the following. First, personal mobility (Trips per Person) returns to or exceeds pre-pandemic baselines for all states by the end of August 2020, with one exception (Florida). Second, vaccination traffic returns to or exceeds pre-pandemic baselines, again with only one exception (New York). The exact opposite occurs, however, for total clinic traffic (the combination of vaccination and non-vaccination traffic): Only Indiana seems to ever recover a pre-pandemic baseline for total clinic traffic. We proceed by testing our hypotheses using observations from March 1 through 60-days following the lifting of the stay-at-home orders. Our empirical approach focuses on how changes in mobility and coarse or precise signals affect clinic traffic. Table \ref{tab:H1H2} and Table \ref{tab:phoc} highlight the most pertinent coefficients from the full regression tables in Appendix \ref{app_vc2_fullReg}.
  
  \begin{sidewaysfigure}[htbp]
      \centering
      \caption{By the end of August 2020, \textit{Trips per Person} and \textit{Vaccination Traffic} returned to or exceeded pre-pandemic levels while \textit{Total Traffic} does not.} \medskip
-    %  \includegraphics[scale=1]{Figures/VC2/Model-Free.png}     
+     \includegraphics[scale=1]{Figures/VC2/Model-Free.png}     
      \label{fig:model_free_vc2}
      \floatfoot{\textbf{Figure Note:} The figure illustrates percent changes in the outcome variables: A 0\% change indicates a return to the pre-pandemic baseline. Grey vertical bands indicate state-wide stay-at-home orders. The blue line represents a LOESS conditional smoothing function applied to the raw data from our sample of 172 clinics.}
  \end{sidewaysfigure} 
@@ -308,7 +317,7 @@
  
  We note the following limitations of our study. First, since observations of clinic traffic come from a vaccine management company, we observe only labels for “vaccination" or “non-vaccination" traffic. That is, we cannot identify different types of non-vaccination visits, even though some visits likely yield more value. Second, our data does not specify whether a non-vaccination visit happened virtually or in-person. Even so, Figure \ref{fig:model_free_vc2} shows non-vaccination traffic (virtual or otherwise) still had not recovered by the end of our study period. Said differently: Even with the broader acceptance and greater availability of telemedicine during the pandemic, such visits still cannot compensate for the drops we see in non-vaccination traffic. Third, we cannot observe the origin of a patient trip, though we do not believe patients cross multiple county lines to seek out primary care during the pandemic. Finally, we do not observe changes to clinic capacity in the wake of the pandemic. But since vaccination traffic returned to pre-pandemic baselines, we do not believe capacity restrictions hinder the recovery of non-vaccination traffic.
  
- Our findings yield several \textbf{implications} for research and practice. First, since mobility preferences strongly predict clinic traffic, operations managers can anticipate changes in traffic with greater precision by including such preferences in traffic prediction algorithms. Per one VaxCare representative: “Forecasting demand for vaccinations has been really tough recently. It is unclear what variables, if any, might be surrogates [for demand] which would reliably strengthen our forecasts." Our results show that personal mobility could be one such predictor. 
+ Our findings yield several \textbf{implications} for research and practice. First, since mobility preferences strongly predict clinic traffic, operations managers can anticipate changes in traffic with greater precision by including such preferences in traffic prediction algorithms. Per one VaxCare representative: “Forecasting demand for vaccinations has been really tough recently. It is unclear what variables, if any, might be surrogates [for demand] which would reliably strengthen our forecasts." Our results show that personal mobility could be one such predictor.
  
  Second, clinicians can find solace knowing that even if mobility (and thus traffic) declines again, patient discretion can help weather steep drops. The public health community championed the benefits of vaccines for decades \citep{Brewer2017}, and the efforts paid off during the summer of 2020. To hedge future downturns, clinicians should continue broadcasting the value of important services.
  
