--- a/diss.tex
+++ b/diss.tex
@@ -6,7 +6,7 @@
 \input{frontmatter/pages}
 
 % Intro
-
+\input{frontmatter/intro}
 
 % Chapter 1
 \input{ch1}
@@ -15,14 +15,10 @@
 \input{ch2}
 
 % Chapter 3
-% \input{ch3}
+\input{ch3}
 
 
 \newpage
-% \bibliography{Bibliography/vc2_3feb22}
-\bibliographystyle{apacite}
-\bibliography{Bibliography/bib_ComplianceCare_3feb22}
-
 % Appendices
 \appendix
 
@@ -35,10 +31,12 @@
 % Appendix 2
 \input{ap2}
 
-% Appendix 2
-% \input{ap3}
+% Appendix 3
+\input{ap3}
 
 % References
-% \input{common/references}
+\input{common/references}
+% \bibliographystyle{apacite}
+% \bibliography{Bibliography/diss_bib_9feb22.bib}
 
 \end{document}
