--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -9,12 +9,21 @@
 \newcommand{\Abi}[2]{\noindent #1 \hspace{1.5cm} \= #2 \\}
 
 \begin{tabbing}
-\Abi{ABD}{All But Dissertation}
-\Ab{I/O}{Input/Output}
-\Ab{IPC}{Inter-Process Communication}
-\Ab{IPI}{Inter-Processor Interrupt}
-\Ab{WSS}{Working Set Size}
-\Ab{AYO}{Add Your Own in alphabetic order\ldots}
+% \Abi{ABD}{All But Dissertation}
+% \Ab{}{}
+\Abi{APE}{Average Partial Effect}
+\Ab{ATE}{Average Treatment Effect}
+\Ab{CC}{Compliance Care - The name of our field experiment in Ch. 1}
+\Ab{CDC}{The US Center for Disease Control and Prevention}
+\Ab{ED}{Emergency Department}
+\Ab{EHR/EMR}{Electronic Health Record / Electronic Medical Record}
+\Ab{ESI}{Emergency Severity Index}
+\Ab{FPL}{First-Place Loving}
+\Ab{LPA}{Last-Place Aversion}
+\Ab{MA}{Medical Assistant}
+\Ab{RPF}{Relative Performance Feedback}
+\Ab{SHO}{Stay-at-Home Order}
+\Ab{YoY}{Year-over-Year}
 \end{tabbing}
 
 \clearpage
