--- a/frontmatter/acknowledgement.tex
+++ b/frontmatter/acknowledgement.tex
@@ -8,14 +8,14 @@
 {\normalfont \textbf{ACKNOWLEDGEMENTS}} \\
 \end{center}
 % \noindent
-Although the completion of a dissertation represents the crowning achievement of an individual student’s journey through a doctoral program, I cannot even remotely propose that this thesis represents the output of one individual. For that, I am immensely grateful to all the members of my dissertation committee for their guidance, mentorship, and support over the course of my program. Professor Jay Swaminathan diligently introduced my peers and I to the rich history of the operations literature, going back to its roots, and actively engaged with my research whenever I presented my work. Professor Vinayak Deshpande similarly introduced me to the fundamentals of our field; furthermore, by inviting me to assist in his teaching, he set an example of what a diligent and effective instructor should aspire to. Professor Diwas KC was the first from outside my home institution who was willing to collaborate with me on a project. His patient guidance and mentoring led me through the process of writing a truly coherent paper, and the fruit of his investment can be seen in my second essay. And Professor Chloe Glaeser has been a mentor and a confidant even in just the few years that she has been on our faculty at UNC. Outside of my committee, I must also acknowledge the mentorship that Dr. Hyoduk Shin provided while I was just an MBA student at the Rady School of Management; it was his guidance that ultimately led me to UNC.
+Although the completion of a dissertation represents the crowning achievement of an individual student’s journey through a doctoral program, I cannot even remotely propose that this dissertation represents the output of one person. For that, I am immensely grateful to all the members of my dissertation committee for their guidance, mentorship, and support over the course of my program. Professor Jay Swaminathan diligently introduced my peers and I to the rich history of the operations literature, going back to its roots, and actively engaged with my research whenever I presented my work. Professor Vinayak Deshpande similarly introduced me to the fundamentals of our field; furthermore, by inviting me to assist in his teaching, he set an example of what a diligent and effective instructor should aspire to. Professor Diwas KC was the first from outside my home institution who was willing to collaborate with me on a project. His patient guidance and mentoring led me through the process of writing a truly coherent paper, and the fruit of his investment can be seen in the second chapter of my dissertation. And Professor Chloe Glaeser has been a mentor and a confidant even in just the few years that she has been on our faculty at UNC. Outside of my committee, I must also acknowledge the mentorship that Dr. Hyoduk Shin provided while I was just an MBA student at the Rady School of Management; it was his guidance that ultimately led me to UNC.
 
-In all of this, Professor Brad Staats deserves a space of his own. Unfortunately, a single paragraph here cannot possibly do justice to how I feel. Brad faithfully supported me during the hardest days of the program, and immediately started to teach me everything he knew about being a successful researcher – patiently, carefully, one principle at a time. I learned how to write by reading his writing and especially his changes to my writing. I learned how to think by processing ideas with him. And even when he decided to take on the challenge of becoming the Dean of the MBA program at UNC, one of his few conditions for accepting the position was specifically that it not hinder our work together – and I believe our joint productivity over the last several years speaks to his commitment to this principle. Nothing that follows would have been even imaginable without his care, support, and friendship. When I’m a tenured professor somewhere, I will consider it a remarkable success if I can treat any graduate student who works with me as well as Brad has treated me. Thank you, sir – thank you!
+In all of this, Professor Brad Staats deserves a space of his own. Unfortunately, a single paragraph here cannot possibly do justice to how I feel. Brad faithfully supported me during the hardest days of the program, and immediately started to teach me everything he knew about being a successful researcher – patiently, carefully, one principle at a time. I learned how to write by reading his writing and especially his changes to my writing. I learned how to think by processing ideas with him. And even when he decided to take on the challenge of becoming the Dean of the MBA program at UNC, one of his few conditions for accepting the position was specifically that it not hinder our work together –- I believe our joint productivity over the last several years speaks to his commitment to this principle. Nothing that follows would have been even imaginable without his care, support, and friendship. When I’m a tenured professor somewhere, I will consider it a remarkable success if I can treat any graduate student who works with me as well as Brad has treated me. Thank you, sir – thank you!
 
 I must also acknowledge my peers and friends at Kenan-Flagler’s doctoral program. I’m grateful our paths intersected. Particularly, I’m not sure what the first two years would have looked like without Dayton Steele by my side. We worked tirelessly together on numerous assignments that might still not be done as of this writing, were it not for his patience and enduring friendship. Furthermore, as an empirical researcher, I wouldn’t have had much research to be proud of without the support of corporate partnerships that yielded interesting settings, questions, and data. I’m also indebted to the healthcare practitioners who made time to let me shadow them, ask (lots of) questions, bug them via email, and ultimately improve my understanding of their domain.
 
 Almost last, but certainly not least, I’m grateful to my tirelessly loving wife, who encouraged and upheld me through all the ups and down of the last several years. Not only did she sacrifice her own career to support mine, but she willingly shouldered essential familial burdens, thus enabling me to pursue success with a singular focus.
-This thesis represents the work of one looking for purpose in a broken world. I consider the work contained here an attempt to put some of those broken pieces back together, and so I thank you for taking the time to consider these efforts. $\mathcal{S.D.G.}$
+This dissertation represents the work of one looking for purpose in a broken world. I consider the work contained here an attempt to put some of those broken pieces back together, and so I thank you for taking the time to consider these efforts. $\mathcal{S.D.G.}$
 
 
 \clearpage
