--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -1,39 +1,35 @@
 \begin{titlepage}
 \begin{center}
 
-% 1. The title of the thesis/dissertation, centered 2Ó below the top of the page
+% 1. Title in all capital letters and centered
 
 \vspace{2in}
 \begin{singlespace}
 \bf
-The Human Factor:\\
-Behavioral Drivers of Worker Discretion and the Operational Impact of this Discretion\\
-on Individual Productivity and System Performance
+% The Human Factor: The Behavioral Drivers and Operational Impact of Discretion
+THE HUMAN FACTOR: THE BEHAVIORAL DRIVERS AND OPERATIONAL IMPACT OF DISCRETION
 \end{singlespace}
 
 
-% 2. Your name, centered 1Ó below the title.
-\vspace{61pt} % 1 in = 72pt, 11pt for the line with text
+% 2. Your full name centered 1″ below the title
+\vspace{1in} % 1 in = 72pt, 11pt for the line with text
 \large Robert Jay Niewoehner III
 \end{center}
 
 
-%3. The following statement, within the full mar- gins, 1Ó below your name:
-%ÒA dissertation [or thesis] submitted to the faculty of the University of North Carolina at Chapel Hill in partial fulfillment of the requirements for the degree of	in the Department [or School or Curriculum] of      .Ó
+%3. Statement correctly specifying the department/program and school granting your degree, centered 1″below your name
 
-\vspace{50pt}
+\vspace{1in}
 \begin{singlespace}
 \noindent \large
 A dissertation submitted to the faculty at the University of North Carolina at Chapel Hill
 in partial fulfillment of the requirements for the degree of Doctor of Philosophy in the 
-Operations Department in the Kenan-Flagler Business School.
+Kenan-Flagler Business School (Operations).
 \end{singlespace}
 
 
-%4. On the lower half of the page, centered, the words ÒChapel HillÓ
-%and one line below that, the year in which your committee approves
-%the completed thesis/dissertation.
-\vspace{50pt}
+%4. Chapel Hill centered 1″ below the statement
+\vspace{1in}
 \begin{center}
 \begin{singlespace} \large
 Chapel Hill\\
@@ -41,12 +37,11 @@ Chapel Hill\\
 \end{singlespace}
 \end{center}
 
-%5. On the right-hand side of the page, ÒApproved by,Ó followed by lines for the
-%signatures of the adviser and four (two for thesis) readers. List
+%5. The phrase Approved by: 1″ below the year; under that include your committee members' names (without signatures or identifiers), all double-spaced, 2/3 across the page, and left-aligned under the Approved by: phrase
 
 \vfill
 \begin{flushright}
-\begin{minipage}[t]{2in} \large
+\begin{minipage}[t]{130pt} \large
 Approved by:\\
 %To be approved by: \\
 Bradley Staats \\
