--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,40 +1,27 @@
-%The word ÒAbstractÓ should be centered 2? below the top of the page. 
-%Skip one line, then center your name followed by the title of the 
-%thesis/dissertation. Use as many lines as necessary. Centered below the 
-%title include the phrase, in parentheses, Ò(Under the direction of  
-%_________)Ó and include the name(s) of the dissertation advisor(s).
-%Skip one line and begin the content of the abstract. It should be 
-%double-spaced and conform to margin guidelines. An abstract should not 
-%exceed 150 words for a thesis and 350 words for a dissertation. The 
-%latter is a requirement of both the Graduate School and UMI's 
-%Dissertation Abstracts International.
-%Because your dissertation abstract will be published, please prepare and 
-%proofread it carefully. Print all symbols and foreign words clearly and 
-%accurately to avoid errors or delays. Make sure that the title given at 
-%the top of the abstract has the same wording as the title shown on your 
-%title page. Avoid mathematical formulas, diagrams, and other 
-%illustrative materials, and only offer the briefest possible description 
-%of your thesis/dissertation and a concise summary of its conclusions. Do 
-%not include lengthy explanations and opinions.
-%The abstract should bear the lower case Roman number ii (if you did not 
-%include a copyright page) or iii (if you include a copyright page).
+% 2″ margin at the top of the page; the second page, if any, returns to a 1″ top margin
+% The heading “ABSTRACT” centered in all capital letters at top of page
+% Your full name followed by the title worded exactly as it is on the title page, centered and one double-spaced line below “ABSTRACT”
+% The phrase “(Under the direction of [advisor's name])” in parentheses, centered, and one single-spaced line below the title
+% The text of your abstract must be double-spaced and no longer than 150 words for a thesis or 350 words for a dissertation
+% Pages are numbered in lower case Roman numerals
 
 \begin{center}
-\vspace*{52pt}
+\vspace*{2in} %
 {\normalfont\textbf{ABSTRACT}}
 \vspace{11pt}
 
 \begin{singlespace}
-Robert Jay Niewoehner III: The Human Factor: Behavioral Drivers of Worker Discretion and the Operational Impact of this Discretion on Individual Productivity and System Performance \\
+Robert Jay Niewoehner III: The Human Factor: The Behavioral Drivers and Operational Impact of Discretion \\
 (Under the direction of Bradley Staats)
 \end{singlespace}
 \end{center}
 
+
 \noindent
-\textbf{Aim:} Recent operations research acknowledges that agents within our operational systems have discretion to make decisions. Modeling this behavior requires assumptions, but these assumptions may induce gaps between models and real-world observations. In the end, these decisions alter firm-level outputs, both for good and ill. Despite this, deliberate system design can transform problematic deviance into productive discretion. In this thesis, I detail three explorations of system design and the operational impact of human discretion. \\
+\textbf{Aim:} Recent operations research acknowledges that agents in our operational systems have discretion to make decisions. Modeling this behavior requires assumptions, but these assumptions may induce gaps between models and real-world observations. In the end, these decisions coalesce firm-level outputs, both for good and ill. Despite this, deliberate system design can transform problematic deviance into productive discretion. In this dissertation, I detail three explorations of system design and the operational impact of human discretion. \\
 \textbf{Background:} The operations literature has a rich history of applying formal mathematical models to explain and study both product and service settings. Operational systems matter, but wherever these systems contain human discretion, people matter too. \\
-\textbf{Context and Methodology:} I primarily focus on the operational effects in the healthcare setting, as healthcare operations frequently focus on how providers shape a service system and recent work has explored interventions to alter provider behavior in positive ways. I apply various empirical methods to answer my research questions. In the first essay, I designed and implemented a field experiment among 145 healthcare clinics. In the second and third essays, I leverage archival data analysis methods. \\
-\textbf{Conclusion:} Operations research considers many facets of work: “What work should we do? When should we do it? How should we do it? And who should be doing it?” This thesis responds each of these questions, with a particular focus on the role of people within the system. My work provides valuable clarity into how human discretion affects operational outcomes, and my insights empower future operations research to more accurately identify the full spectrum of worker behavior. \\
+\textbf{Context and Methodology:} I primarily focus on the operational effects of discretion in the healthcare setting, where the literature frequently examines how providers shape a service system. My research empirically responds to each of my research questions with modern econometric and machine learning methods. In the first essay, I designed and implemented a field experiment among 145 healthcare clinics. In the second and third essays, I leverage archival data analysis methods. \\
+\textbf{Conclusion:} Operations research considers many facets of work: “What work should we do? When should we do it? How should we do it? And who should be doing it?” Given my focus on the role of people within the system, my work provides valuable clarity into how human discretion affects operational outcomes, and my insights empower future operations research to better understand the full spectrum of worker behavior. \\
 
 
 \clearpage
