--- a/frontmatter/pages.tex
+++ b/frontmatter/pages.tex
@@ -1,6 +1,7 @@
 
 % front matter pages use 2in top margin
-\newgeometry{left=1.25in,top=2in,right=1.25in,bottom=1in,nohead}
+% \newgeometry{left=1.25in,top=2in,right=1.25in,bottom=1in,nohead}
+\newgeometry{left=1.25in,top=2in,right=1in,bottom=1in,nohead}
 \pagenumbering{roman}
 
 %1. Title Page
@@ -42,8 +43,8 @@
 
 \input{frontmatter/figures}
 
-%8. List of Abbreviations (commented out)
-% \input{frontmatter/abbreviations}
+%8. List of Abbreviations 
+\input{frontmatter/abbreviations}
 
 %9. List of Symbols (commented out)
 
